# HoneyPotter

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  static.yml
docs/: CNAME  index.html  style.css
docs/assets/: class_list_example.json  class_list_example.txt
examples/: ood_palette_example.json
honeypotter_pkg/: README.md  pyproject.toml
honeypotter_pkg/docs/: index.html  style.css
honeypotter_pkg/examples/: generate_palette_vs_ood.py  integration_example.py
honeypotter_pkg/src/honeypotter/: cli.py  gamut.py  generator.py
honeypotter_pkg/tests/: test_moire.py
src/honeypotter/: __init__.py  cli.py  generator.py  utils.py
tests/: test_ood_smoke.py  test_patterns_only.py
